@@ -431,6 +431,7 @@ constants.gui_strings = {
   placed_in = { "gui.rb-placed-in" },
   place_result = { "gui.rb-place-result" },
   pollution_bonus = { "description.pollution-bonus" },
+  pollution_multiplier = { "gui.rb-pollution-multiplier" },
   prerequisite_of = { "gui.rb-prerequisite-of" },
   prerequisites = { "gui.rb-prerequisites" },
   preserve_search_query = { "gui.rb-preserve-search-query" },
@@ -909,6 +910,11 @@ constants.pages = {
           label = "crafting_time",
           label_tooltip = "crafting_time_desc",
           formatter = "seconds_from_ticks",
+        },
+        {
+          type = "plain",
+          source = "pollution_multiplier",
+          formatter = "percent",
         },
       },
     },
