@@ -243,6 +243,7 @@ rb-place-as-equipment-result=Place as equipment result
 rb-placed-by=Placed by
 rb-placed-in=Placed in
 rb-place-result=Place result
+rb-pollution-multiplier=Pollution multiplier
 rb-prerequisite-of=Prerequisite of
 rb-prerequisites=Prerequisites
 rb-product-of=Product of
