@@ -2,7 +2,7 @@
 Version: 3.4.0
 Date: ????
   Features:
-    - Added new categories
+    - Added new categories:
       - Entity type
       - Item type
       - Science pack: Uncheck a science pack to hide all objects that it unlocks (#89)
@@ -11,6 +11,7 @@ Date: ????
     - Added new page contents:
       - [Entity] Entity type, expected resources
       - [Item] Affects recipes (for modules), Gathered from, item type
+      - [Recipe] Pollution multiplier (#113)
     - Added new pages:
       - Entity type: All entities of the given type
       - Item type: All items of the given type
